fix error and update reset password template
Signed-off-by: mazhar <mazhar1322@cseku.ac.bd>